# filebrowser-safe

./: .coveragerc  .gitignore  .hgignore  .releaserc  .travis.yml  MANIFEST.in  README.rst  pytest.ini  runtests.py  setup.cfg  setup.py  test.sh  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
filebrowser_safe/: base.py  compat.py  decorators.py  defaults.py  fields.py  forms.py  functions.py  models.py  settings.py  storage.py  test_base.py  urls.py  views.py
filebrowser_safe/locale/cs/LC_MESSAGES/: django.mo  django.po
filebrowser_safe/locale/fr/LC_MESSAGES/: django.mo  django.po
filebrowser_safe/locale/nb/LC_MESSAGES/: django.mo  django.po
filebrowser_safe/locale/ru/LC_MESSAGES/: django.po
filebrowser_safe/management/commands/: version_generator.py
filebrowser_safe/static/filebrowser/css/: filebrowser.css  rtl.css
filebrowser_safe/static/filebrowser/css/smoothness/: jquery-ui-1.9.1.custom.min.css
filebrowser_safe/static/filebrowser/js/: FB_FileBrowseField.js  filebrowser-popup.js  jquery-ui-1.9.1.custom.min.js  upload.js
filebrowser_safe/templates/filebrowser/: append.html  custom_field.html  index.html  makedir.html  rename.html  upload.html  versions.html
filebrowser_safe/templates/filebrowser/include/: breadcrumbs.html  filelisting.html  filter.html  paginator.html  search.html  tableheader.html  toolbar.html
filebrowser_safe/templatetags/: fb_csrf.py  fb_pagination.py  fb_tags.py  fb_versions.py
filebrowser_safe/tests/: settings.py  test_anonymous.py  urls.py
tests/: settings.py  test_anonymous.py  test_staff.py  urls.py
tests/templatetags/: mezzanine_tags.py
