[metadata]
name = filebrowser_safe
version = attr: filebrowser_safe.__version__
description = A snapshot of the filebrowser_3 branch of django-filebrowser, packaged as a dependency for the Mezzanine CMS for Django.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Kranzlmueller, Axel Swoboda (vonautomatisch)
author_email = werkstaetten@vonautomatisch.at
maintainer = Stephen McDonald
maintainer_email = stephen.mc@gmail.com
url = http://github.com/stephenmcd/filebrowser-safe
license_file = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7
packages = find:
include_package_data = true

[options.extras_require]
testing =
    pytest-django >= 4, <5
    pytest-cov >= 2, < 3
codestyle =
    flake8 >= 3, <4
    black==20.8b1
    isort >= 5, <6
    pyupgrade >= 2, <3

# Building

[bdist_wheel]
universal = 1
